<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.digitalevidence.activities.MainActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/agency"
        app:layout_constraintBottom_toTopOf="@+id/text_namelabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <TextView
        android:id="@+id/text_name"
        style="@style/TextBoxMax"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/text_agency"
        app:layout_constraintTop_toTopOf="@+id/text_namelabel" />

    <TextView
        android:id="@+id/text_agency"
        style="@style/TextBoxMax"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="Cal Poly Capstone"
        app:layout_constraintStart_toStartOf="@+id/text_department"
        app:layout_constraintTop_toTopOf="@+id/text_agencylabel" />

    <TextView
        android:id="@+id/text_department"
        style="@style/TextBoxMax"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="Team 4N6"
        app:layout_constraintStart_toStartOf="@+id/text_email"
        app:layout_constraintTop_toTopOf="@+id/text_departmentlabel" />

    <TextView
        android:id="@+id/text_emaillabel"
        style="@style/TextBoxMBold"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/sign_out"
        app:layout_constraintEnd_toStartOf="@+id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_departmentlabel" />

    <TextView
        android:id="@+id/text_agencylabel"
        style="@style/TextBoxMBold"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/agency"
        app:layout_constraintBottom_toTopOf="@+id/text_departmentlabel"
        app:layout_constraintStart_toStartOf="@+id/text_departmentlabel"
        app:layout_constraintTop_toBottomOf="@+id/text_namelabel" />

    <TextView
        android:id="@+id/text_namelabel"
        style="@style/TextBoxMBold"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/text_agencylabel"
        app:layout_constraintStart_toStartOf="@+id/text_agencylabel"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_departmentlabel"
        style="@style/TextBoxMBold"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/department"
        app:layout_constraintBottom_toTopOf="@+id/text_emaillabel"
        app:layout_constraintStart_toStartOf="@+id/text_emaillabel"
        app:layout_constraintTop_toBottomOf="@+id/text_agencylabel" />

    <TextView
        android:id="@+id/text_email"
        style="@style/TextBoxMax"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/text_emaillabel"
        app:layout_constraintTop_toTopOf="@+id/text_emaillabel" />

    <Button
        android:id="@+id/sign_out"
        style="@style/TitleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorBackground"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toTopOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emaillabel" />

    <include
        android:id="@+id/include2"
        layout="@layout/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>